--- a/Modelbouwer/View/StorageManagement.xaml
+++ b/Modelbouwer/View/StorageManagement.xaml
@@ -13,24 +13,30 @@
 	Title="StorageManagement"
 	>
 
-	<Page.Resources>
-		<converter:GreaterThanZeroConverter x:Key="GreaterThanZeroConverter" />
-	</Page.Resources>
-
 	<Page.DataContext>
 		<viewmodels:CombinedInventoryViewModel />
 	</Page.DataContext>
 
+	<Page.Resources>
+		<converter:GreaterThanZeroConverter x:Key="GreaterThanZeroConverter" />
+		<converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+	</Page.Resources>
+
 	<Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
 		<Grid Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
 			<Grid.RowDefinitions>
+				<RowDefinition Height="60" />
 				<RowDefinition Height="50" />
 				<RowDefinition Height="*" />
 				<RowDefinition Height="0" />
 			</Grid.RowDefinitions>
 
 			<!--#region Page title-->
-			<StackPanel Grid.Row="0" Orientation="Vertical">
+			<StackPanel
+				Grid.Row="0"
+				Margin="0,0,0,0"
+				Orientation="Vertical"
+				>
 				<Grid>
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="*" />
@@ -57,10 +63,73 @@
 			</StackPanel>
 			<!--#endregion-->
 
+			<!--#region Search block-->
+			<!--https://help.syncfusion.com/wpf/datagrid/search-->
+			<!--https://help.syncfusion.com/wpf/datagrid/filterrow-->
+			<StackPanel Grid.Row="1" Orientation="Horizontal">
+				<Border
+					Width="250"
+					Height="32"
+					Background="White"
+					CornerRadius="5"
+					>
+					<StackPanel Height="25" Orientation="Horizontal">
+						<TextBlock
+							Width="220"
+							Height="20"
+							MinWidth="220"
+							Margin="5"
+							HorizontalAlignment="Left"
+							VerticalAlignment="Center"
+							Background="White"
+							Style="{DynamicResource DefaultTextBlock}"
+							Tag="Zoek"
+							ToolTip="Geef een zoek waarde"
+							UseLayoutRounding="True"
+							/>
+						<Button
+							x:Name="FilterButton"
+							Width="20"
+							Height="20"
+							Background="Transparent"
+							BorderThickness="0"
+							Click="ToggleButton"
+							Tag="Filter"
+							Visibility="{Binding IsFilterButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
+							>
+							<Image
+								Width="20"
+								Height="20"
+								Source="{StaticResource filter}"
+								/>
+						</Button>
+						<Button
+							x:Name="SearchButton"
+							Width="20"
+							Height="20"
+							Background="Transparent"
+							BorderThickness="0"
+							Click="ToggleButton"
+							Tag="Search"
+							Visibility="{Binding IsSearchButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
+							>
+							<Image
+								Width="20"
+								Height="20"
+								Source="{StaticResource filter}"
+								/>
+						</Button>
+
+
+					</StackPanel>
+				</Border>
+			</StackPanel>
+			<!--#endregion-->
+
 			<!--#region Datagrid-->
 			<syncfusion:SfDataGrid
 				x:Name="dataGrid"
-				Grid.Row="1"
+				Grid.Row="2"
 				Margin="10,5"
 				AllowDeleting="False"
 				AllowEditing="False"
