--- a/Modelbouwer/View/StorageManagement.xaml
+++ b/Modelbouwer/View/StorageManagement.xaml
@@ -14,12 +14,11 @@
 	>
 
 	<Page.DataContext>
-		<viewmodels:CombinedInventoryViewModel />
+		<viewmodels:InventoryViewModel />
 	</Page.DataContext>
 
 	<Page.Resources>
 		<converter:GreaterThanZeroConverter x:Key="GreaterThanZeroConverter" />
-		<converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 	</Page.Resources>
 
 	<Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
@@ -64,38 +63,49 @@
 			<!--#endregion-->
 
 			<!--#region Search block-->
-			<!--https://help.syncfusion.com/wpf/datagrid/search-->
-			<!--https://help.syncfusion.com/wpf/datagrid/filterrow-->
+			<!--  https://help.syncfusion.com/wpf/datagrid/search  -->
+			<!--  https://help.syncfusion.com/wpf/datagrid/filterrow  -->
 			<StackPanel Grid.Row="1" Orientation="Horizontal">
 				<Border
-					Width="250"
-					Height="32"
+					Width="365"
+					Height="35"
+					Margin="5"
 					Background="White"
+					BorderBrush="#cccccc"
+					BorderThickness="1"
 					CornerRadius="5"
 					>
-					<StackPanel Height="25" Orientation="Horizontal">
-						<TextBlock
-							Width="220"
-							Height="20"
-							MinWidth="220"
-							Margin="5"
+					
+					<Grid VerticalAlignment="Center">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*"/>
+							<ColumnDefinition Width="35"/>
+						</Grid.ColumnDefinitions>
+						
+						<TextBox Grid.Column="0"
+							Width="320" x:Name="FilterSearchText"
+							Height="27"
+							MinWidth="220" Margin="3"
+							Padding="3,0"
 							HorizontalAlignment="Left"
-							VerticalAlignment="Center"
+							VerticalAlignment="Center" TextChanged="FilterSearch"
 							Background="White"
-							Style="{DynamicResource DefaultTextBlock}"
-							Tag="Zoek"
-							ToolTip="Geef een zoek waarde"
+							Tag="{StaticResource Edit.Inventory.DataGrid.FilterSearch.Search.Tag}"
+							ToolTip="{StaticResource Edit.Inventory.DataGrid.FilterSearch.Search.Tooltip}"
 							UseLayoutRounding="True"
 							/>
-						<Button
+						
+						<GridSplitter Grid.Column="0" Width="1" Background="LightGray" VerticalAlignment="Stretch"/>
+						
+						<Button Grid.Column="1"
 							x:Name="FilterButton"
 							Width="20"
 							Height="20"
 							Background="Transparent"
 							BorderThickness="0"
 							Click="ToggleButton"
-							Tag="Filter"
-							Visibility="{Binding IsFilterButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
+							ToolTip="{StaticResource Edit.Inventory.DataGrid.Filter.Tooltip}"
+							Visibility="Collapsed"
 							>
 							<Image
 								Width="20"
@@ -103,25 +113,25 @@
 								Source="{StaticResource filter}"
 								/>
 						</Button>
-						<Button
+						<Button Grid.Column="1"
 							x:Name="SearchButton"
-							Width="20"
+							Width="20" 
 							Height="20"
 							Background="Transparent"
 							BorderThickness="0"
 							Click="ToggleButton"
-							Tag="Search"
-							Visibility="{Binding IsSearchButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
+							ToolTip="{StaticResource Edit.Inventory.DataGrid.Search.Tooltip}"
+							Visibility="Visible"
 							>
 							<Image
-								Width="20"
-								Height="20"
-								Source="{StaticResource filter}"
+								Width="18"
+								Height="18"
+								Source="{StaticResource search}"
 								/>
 						</Button>
 
 
-					</StackPanel>
+					</Grid>
 				</Border>
 			</StackPanel>
 			<!--#endregion-->
@@ -142,7 +152,7 @@
 				CurrentCellBeginEdit="OriginalInventory"
 				CurrentCellEndEdit="ChangedInventory"
 				FilterRowPosition="Top"
-				ItemsSource="{Binding InventoryViewModel.Inventory, Mode=TwoWay}"
+				ItemsSource="{Binding Inventory, Mode=TwoWay}"
 				SelectedIndex="0"
 				SortClickAction="SingleClick"
 				>
